block and inline exercises done

--- a/foundations/block-and-inline/02-margin-and-padding-2/solution/solution.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/solution/solution.css
@@ -52,6 +52,7 @@ We separated it out here to make it extra clear what has changed. */
 .button-container {
   text-align: center;
   padding: 8px;
+  text-align: center;
 }
 
 button {
